# Electronic-Fuel-Injection-RP2350

./: README.md
rp2350_efi/: CMakeLists.txt  README.md
rp2350_efi/src/: ecu_config.h  main.cpp
rp2350_efi/src/efi/: fuel_calc.cpp  fuel_calc.h
rp2350_efi/src/fusion/: kalman_filter.cpp  kalman_filter.h
